influxdb3/tests/server/snapshots/server__query__api_v3_query_sql_meta_cache.snap
---
source: influxdb3/tests/server/query.rs
expression: resp
---
[
  {
    "host": "c",
    "region": "ca"
  },
  {
    "host": "b",
    "region": "eu"
  },
  {
    "host": "a",
    "region": "us"
  }
]
